[workspace]
members = [
    "autoWebex",
    "histogram-url-gen",
    "instagram",
    "list",
    "myio",
    "prime-factor",
    "sandbox",
    "stats",
    "table_downloader",
    "techTree",
    "todo",
    "toml_format",
]
resolver = "3"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
split-debuginfo = "unpacked"
rpath = false
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
